--- a/ReactionGame/View/Base.lproj/Main.storyboard
+++ b/ReactionGame/View/Base.lproj/Main.storyboard
@@ -16,8 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79g-HJ-Tbm">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-G1-MvM">
-                                <rect key="frame" x="155.5" y="426" width="101" height="45"/>
+                                <rect key="frame" x="134" y="426" width="146" height="45"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Start game">
                                     <color key="baseForegroundColor" systemColor="labelColor"/>
@@ -27,17 +31,29 @@
                                     <action selector="startGameButton:" destination="Mca-S2-6YP" eventType="touchUpInside" id="Jja-sG-xch"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z04-VO-A1d">
+                                <rect key="frame" x="40" y="88" width="74" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0Zh-VD-2Ur"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Xao-G1-MvM" firstAttribute="leading" secondItem="0Zh-VD-2Ur" secondAttribute="leading" constant="155.71000000000001" id="DzW-CU-7XZ"/>
-                            <constraint firstItem="0Zh-VD-2Ur" firstAttribute="bottom" secondItem="Xao-G1-MvM" secondAttribute="bottom" constant="391" id="Gqb-in-mHa"/>
-                            <constraint firstItem="0Zh-VD-2Ur" firstAttribute="trailing" secondItem="Xao-G1-MvM" secondAttribute="trailing" constant="157.28999999999999" id="gXs-Dv-M0G"/>
-                            <constraint firstItem="Xao-G1-MvM" firstAttribute="top" secondItem="0Zh-VD-2Ur" secondAttribute="top" constant="338" id="vyP-mn-cKV"/>
+                            <constraint firstItem="79g-HJ-Tbm" firstAttribute="trailing" secondItem="0Zh-VD-2Ur" secondAttribute="trailing" id="3ft-DZ-a0C"/>
+                            <constraint firstItem="79g-HJ-Tbm" firstAttribute="top" secondItem="0Zh-VD-2Ur" secondAttribute="top" id="Aos-Av-hTl"/>
+                            <constraint firstItem="0Zh-VD-2Ur" firstAttribute="bottom" secondItem="Xao-G1-MvM" secondAttribute="bottom" constant="391" id="Cyy-Vb-UtF"/>
+                            <constraint firstItem="Xao-G1-MvM" firstAttribute="leading" secondItem="0Zh-VD-2Ur" secondAttribute="leading" constant="134" id="Fb5-TX-Utv"/>
+                            <constraint firstItem="Xao-G1-MvM" firstAttribute="top" secondItem="0Zh-VD-2Ur" secondAttribute="top" constant="338" id="T0R-Sd-0Mw"/>
+                            <constraint firstItem="0Zh-VD-2Ur" firstAttribute="trailing" secondItem="Xao-G1-MvM" secondAttribute="trailing" constant="134" id="e0M-li-xSy"/>
+                            <constraint firstItem="79g-HJ-Tbm" firstAttribute="leading" secondItem="0Zh-VD-2Ur" secondAttribute="leading" id="i2W-rd-U12"/>
+                            <constraint firstItem="79g-HJ-Tbm" firstAttribute="bottom" secondItem="0Zh-VD-2Ur" secondAttribute="bottom" id="iMS-Yr-Kue"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Dho-5j-CWq"/>
+                    <connections>
+                        <outlet property="startGameLabel" destination="Xao-G1-MvM" id="VjO-70-OmG"/>
+                        <outlet property="webView" destination="79g-HJ-Tbm" id="rpp-Oo-wXu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JxL-mc-vV0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
